--- a/okres/Plzeň-sever.html
+++ b/okres/Plzeň-sever.html
@@ -687,7 +687,7 @@ COVID očkování</title>
             <td class="text-right" data-value="0">0</td>
         </tr>
         
-        <tr class="" data-kraj="CZ032"
+        <tr class="table-warning" data-kraj="CZ032"
             data-vaccines="" data-children="False">
             <td class="ellipsis" data-value="MUDr. Jana Krauzová" data-toggle="tooltip" data-placement="auto"
                 title="MUDr. Jana Krauzová">
