--- a/okres/Náchod.html
+++ b/okres/Náchod.html
@@ -991,7 +991,7 @@ COVID očkování</title>
             <td class="text-right" data-value="0">0</td>
         </tr>
         
-        <tr class="" data-kraj="CZ052"
+        <tr class="table-warning" data-kraj="CZ052"
             data-vaccines="" data-children="False">
             <td class="ellipsis" data-value="MUDr. Ivo Peroutka" data-toggle="tooltip" data-placement="auto"
                 title="MUDr. Ivo Peroutka">
