--- a/praktik/05242339000.html
+++ b/praktik/05242339000.html
@@ -102,7 +102,7 @@ COVID očkování</title>
         <div class="col">
             <div class="alert alert-info alert-dismissible fade show" role="alert">
                 <p class="mb-0">
-                    Čas poslední aktualizace: <strong>po 03. 06. 06:22</strong>.
+                    Čas poslední aktualizace: <strong>st 05. 06. 06:21</strong>.
                     <a class="alert-link" href="/napoveda#aktualizace">
                         Jak často jsou data aktualizována?
                     </a>
