--- a/kraj/Plzeňský.html
+++ b/kraj/Plzeňský.html
@@ -4194,7 +4194,7 @@ COVID očkování</title>
             <td class="text-right" data-value="0">0</td>
         </tr>
         
-        <tr class="table-warning" data-kraj="CZ032"
+        <tr class="" data-kraj="CZ032"
             data-vaccines="" data-children="False">
             <td class="ellipsis" data-value="MUDr. Miroslava Roupová, interní a PL pro dospělé" data-toggle="tooltip" data-placement="auto"
                 title="MUDr. Miroslava Roupová, interní a PL pro dospělé">
@@ -8384,14 +8384,14 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="25 276">
+                      title="25 279">
                     69,6 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="24 825">
+                      title="24 828">
                     68,4 %
                 </span>
             </td>
@@ -8412,21 +8412,21 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="19 572">
-                    57,4 %
+                      title="19 571">
+                    57,3 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="19 228">
+                      title="19 227">
                     56,3 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="7 530">
+                      title="7 529">
                     22,1 %
                 </span>
             </td>
@@ -8482,7 +8482,7 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="12 437">
+                      title="12 436">
                     29,6 %
                 </span>
             </td>
@@ -8552,14 +8552,14 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="28 909">
+                      title="28 908">
                     75,4 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="28 742">
+                      title="28 741">
                     75,0 %
                 </span>
             </td>
@@ -8580,21 +8580,21 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="28 378">
+                      title="28 375">
                     76,5 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="28 181">
-                    76,0 %
+                      title="28 178">
+                    75,9 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="20 043">
+                      title="20 040">
                     54,0 %
                 </span>
             </td>
@@ -8608,21 +8608,21 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="26 547">
+                      title="26 548">
                     75,5 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="26 396">
+                      title="26 397">
                     75,0 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="20 677">
+                      title="20 678">
                     58,8 %
                 </span>
             </td>
@@ -8750,21 +8750,21 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="380 542">
+                      title="380 541">
                     73,5 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="376 373">
+                      title="376 372">
                     72,7 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="238 350">
+                      title="238 346">
                     46,0 %
                 </span>
             </td>
