--- a/okres/Plzeň-město.html
+++ b/okres/Plzeň-město.html
@@ -1829,7 +1829,7 @@ COVID očkování</title>
             <td class="text-right" data-value="0">0</td>
         </tr>
         
-        <tr class="table-warning" data-kraj="CZ032"
+        <tr class="" data-kraj="CZ032"
             data-vaccines="" data-children="False">
             <td class="ellipsis" data-value="MUDr. Miroslava Roupová, interní a PL pro dospělé" data-toggle="tooltip" data-placement="auto"
                 title="MUDr. Miroslava Roupová, interní a PL pro dospělé">
