--- a/praktik/19319550000.html
+++ b/praktik/19319550000.html
@@ -251,10 +251,10 @@ COVID očkování</title>
             </td>
             
             <td>
-                děti od 14 let
+                očkujeme dospělé a děti od 14 let, je nutné se předem objednat lze telefonicky nebo přes web www.prahamed.cz
             </td>
             <td class="text-right">
-                čt 06. 06. 19:58
+                čt 06. 06. 20:00
             </td>
         </tr>
         
