--- a/kraj/Jihomoravský.html
+++ b/kraj/Jihomoravský.html
@@ -4067,7 +4067,7 @@ COVID očkování</title>
             <td class="text-right" data-value="0">0</td>
         </tr>
         
-        <tr class="" data-kraj="CZ064"
+        <tr class="table-warning" data-kraj="CZ064"
             data-vaccines="" data-children="False">
             <td class="ellipsis" data-value="MUDr. František Kasan" data-toggle="tooltip" data-placement="auto"
                 title="MUDr. František Kasan">
@@ -15308,14 +15308,14 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="13 148">
+                      title="13 149">
                     63,0 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="12 886">
+                      title="12 887">
                     61,7 %
                 </span>
             </td>
@@ -15336,14 +15336,14 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="48 676">
+                      title="48 677">
                     67,7 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="47 763">
+                      title="47 764">
                     66,4 %
                 </span>
             </td>
@@ -15364,21 +15364,21 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="40 863">
+                      title="40 866">
                     58,2 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="40 162">
+                      title="40 165">
                     57,2 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="16 770">
+                      title="16 773">
                     23,9 %
                 </span>
             </td>
@@ -15392,21 +15392,21 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="50 283">
+                      title="50 286">
                     61,0 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="49 446">
+                      title="49 449">
                     59,9 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="22 464">
+                      title="22 465">
                     27,2 %
                 </span>
             </td>
@@ -15420,21 +15420,21 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="54 975">
+                      title="54 976">
                     62,3 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="54 196">
+                      title="54 197">
                     61,4 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="26 737">
+                      title="26 738">
                     30,3 %
                 </span>
             </td>
@@ -15448,21 +15448,21 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="66 061">
+                      title="66 060">
                     66,2 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="65 342">
+                      title="65 341">
                     65,4 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="36 301">
+                      title="36 300">
                     36,4 %
                 </span>
             </td>
@@ -15476,21 +15476,21 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="71 037">
+                      title="71 036">
                     74,2 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="70 456">
+                      title="70 455">
                     73,6 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="43 578">
+                      title="43 577">
                     45,5 %
                 </span>
             </td>
@@ -15504,14 +15504,14 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="56 707">
+                      title="56 708">
                     74,8 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="56 315">
+                      title="56 316">
                     74,3 %
                 </span>
             </td>
@@ -15532,21 +15532,21 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="55 986">
+                      title="55 987">
                     76,0 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="55 604">
+                      title="55 605">
                     75,5 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="39 391">
+                      title="39 392">
                     53,5 %
                 </span>
             </td>
@@ -15560,21 +15560,21 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="52 613">
+                      title="52 614">
                     75,0 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="52 284">
+                      title="52 285">
                     74,6 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="40 701">
+                      title="40 702">
                     58,1 %
                 </span>
             </td>
@@ -15602,7 +15602,7 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="49 906">
+                      title="49 905">
                     68,0 %
                 </span>
             </td>
@@ -15672,21 +15672,21 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="51 663">
+                      title="51 662">
                     97,0 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="50 772">
+                      title="50 771">
                     95,3 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="42 841">
+                      title="42 840">
                     80,4 %
                 </span>
             </td>
@@ -15702,21 +15702,21 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="753 959">
+                      title="753 968">
                     72,5 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="744 977">
+                      title="744 986">
                     71,7 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="471 237">
+                      title="471 240">
                     45,3 %
                 </span>
             </td>
