--- a/kraj/Moravskoslezský.html
+++ b/kraj/Moravskoslezský.html
@@ -5891,7 +5891,7 @@ COVID očkování</title>
             <td class="text-right" data-value="0">0</td>
         </tr>
         
-        <tr class="" data-kraj="CZ080"
+        <tr class="table-warning" data-kraj="CZ080"
             data-vaccines="" data-children="False">
             <td class="ellipsis" data-value="MUDr. Krumniklová Irena s.r.o." data-toggle="tooltip" data-placement="auto"
                 title="MUDr. Krumniklová Irena s.r.o.">
@@ -14831,14 +14831,14 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="18 834">
+                      title="18 835">
                     37,0 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="18 387">
+                      title="18 388">
                     36,1 %
                 </span>
             </td>
@@ -14859,21 +14859,21 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="12 695">
+                      title="12 696">
                     56,6 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="12 460">
+                      title="12 461">
                     55,6 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="3 078">
+                      title="3 079">
                     13,7 %
                 </span>
             </td>
@@ -14887,21 +14887,21 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="47 780">
+                      title="47 782">
                     61,7 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="46 979">
+                      title="46 981">
                     60,6 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="16 486">
+                      title="16 487">
                     21,3 %
                 </span>
             </td>
@@ -14915,21 +14915,21 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="35 596">
+                      title="35 597">
                     50,2 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="34 979">
+                      title="34 980">
                     49,3 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="13 303">
+                      title="13 304">
                     18,8 %
                 </span>
             </td>
@@ -14957,7 +14957,7 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="17 378">
+                      title="17 379">
                     21,8 %
                 </span>
             </td>
@@ -14971,21 +14971,21 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="44 931">
+                      title="44 930">
                     57,5 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="44 308">
+                      title="44 307">
                     56,7 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="20 437">
+                      title="20 436">
                     26,1 %
                 </span>
             </td>
@@ -14999,14 +14999,14 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="57 001">
+                      title="57 000">
                     61,6 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="56 456">
+                      title="56 455">
                     61,0 %
                 </span>
             </td>
@@ -15055,21 +15055,21 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="58 435">
+                      title="58 434">
                     72,3 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="58 051">
+                      title="58 050">
                     71,8 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="38 101">
+                      title="38 100">
                     47,1 %
                 </span>
             </td>
@@ -15253,21 +15253,21 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="715 038">
+                      title="715 040">
                     68,2 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="707 218">
+                      title="707 220">
                     67,5 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="440 071">
+                      title="440 073">
                     42,0 %
                 </span>
             </td>
