--- a/kraj/Plzeňský.html
+++ b/kraj/Plzeňský.html
@@ -2532,7 +2532,7 @@ COVID očkování</title>
             <td class="text-right" data-value="0">0</td>
         </tr>
         
-        <tr class="" data-kraj="CZ032"
+        <tr class="table-warning" data-kraj="CZ032"
             data-vaccines="" data-children="False">
             <td class="ellipsis" data-value="VITDO PRAKTIK s.r.o." data-toggle="tooltip" data-placement="auto"
                 title="VITDO PRAKTIK s.r.o.">
@@ -8384,21 +8384,21 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="25 279">
+                      title="25 280">
                     69,6 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="24 828">
+                      title="24 829">
                     68,4 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="9 424">
+                      title="9 425">
                     26,0 %
                 </span>
             </td>
@@ -8412,21 +8412,21 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="19 571">
-                    57,3 %
+                      title="19 573">
+                    57,4 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="19 227">
+                      title="19 229">
                     56,3 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="7 529">
+                      title="7 530">
                     22,1 %
                 </span>
             </td>
@@ -8440,21 +8440,21 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="23 657">
+                      title="23 656">
                     59,4 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="23 290">
+                      title="23 289">
                     58,5 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="10 163">
+                      title="10 162">
                     25,5 %
                 </span>
             </td>
@@ -8496,14 +8496,14 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="32 212">
+                      title="32 213">
                     65,8 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="31 945">
+                      title="31 946">
                     65,2 %
                 </span>
             </td>
@@ -8524,14 +8524,14 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="37 125">
+                      title="37 124">
                     75,5 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="36 876">
+                      title="36 875">
                     75,0 %
                 </span>
             </td>
@@ -8608,21 +8608,21 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="26 548">
+                      title="26 549">
                     75,5 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="26 397">
+                      title="26 398">
                     75,0 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="20 678">
+                      title="20 679">
                     58,8 %
                 </span>
             </td>
@@ -8636,14 +8636,14 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="32 150">
+                      title="32 151">
                     83,7 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="31 998">
+                      title="31 999">
                     83,3 %
                 </span>
             </td>
@@ -8720,21 +8720,21 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="24 532">
+                      title="24 531">
                     99,1 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="24 121">
+                      title="24 120">
                     97,4 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="20 460">
+                      title="20 459">
                     82,6 %
                 </span>
             </td>
@@ -8750,21 +8750,21 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="380 541">
+                      title="380 544">
                     73,5 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="376 372">
+                      title="376 375">
                     72,7 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="238 346">
+                      title="238 347">
                     46,0 %
                 </span>
             </td>
