--- a/okres/Brno-město.html
+++ b/okres/Brno-město.html
@@ -2392,7 +2392,7 @@ COVID očkování</title>
             <td class="text-right" data-value="0">0</td>
         </tr>
         
-        <tr class="" data-kraj="CZ064"
+        <tr class="table-warning" data-kraj="CZ064"
             data-vaccines="" data-children="False">
             <td class="ellipsis" data-value="MUDr. František Kasan" data-toggle="tooltip" data-placement="auto"
                 title="MUDr. František Kasan">
