--- a/kraj/Moravskoslezský.html
+++ b/kraj/Moravskoslezský.html
@@ -4287,7 +4287,7 @@ COVID očkování</title>
             <td class="text-right" data-value="0">0</td>
         </tr>
         
-        <tr class="" data-kraj="CZ080"
+        <tr class="table-warning" data-kraj="CZ080"
             data-vaccines="" data-children="False">
             <td class="ellipsis" data-value="MUDr. Tatiana Raczkowská" data-toggle="tooltip" data-placement="auto"
                 title="MUDr. Tatiana Raczkowská">
@@ -14887,14 +14887,14 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="47 782">
+                      title="47 781">
                     61,7 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="46 981">
+                      title="46 980">
                     60,6 %
                 </span>
             </td>
@@ -14943,14 +14943,14 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="42 602">
+                      title="42 603">
                     53,4 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="41 942">
+                      title="41 943">
                     52,6 %
                 </span>
             </td>
@@ -15111,21 +15111,21 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="55 140">
+                      title="55 141">
                     73,9 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="54 799">
+                      title="54 800">
                     73,5 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="42 135">
+                      title="42 136">
                     56,5 %
                 </span>
             </td>
@@ -15253,21 +15253,21 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="715 040">
+                      title="715 041">
                     68,2 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="707 220">
+                      title="707 221">
                     67,5 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="440 073">
+                      title="440 074">
                     42,0 %
                 </span>
             </td>
