--- a/kraj/Zlínský.html
+++ b/kraj/Zlínský.html
@@ -6076,7 +6076,7 @@ COVID očkování</title>
             <td class="text-right" data-value="0">0</td>
         </tr>
         
-        <tr class="" data-kraj="CZ072"
+        <tr class="table-warning" data-kraj="CZ072"
             data-vaccines="" data-children="False">
             <td class="ellipsis" data-value="MUDr. MARKÉTA ŽEMBOVÁ" data-toggle="tooltip" data-placement="auto"
                 title="MUDr. MARKÉTA ŽEMBOVÁ">
@@ -8389,14 +8389,14 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="17 049">
+                      title="17 050">
                     50,7 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="16 709">
+                      title="16 710">
                     49,7 %
                 </span>
             </td>
@@ -8727,14 +8727,14 @@ COVID očkování</title>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="353 758">
+                      title="353 759">
                     69,4 %
                 </span>
             </td>
 
             <td class="text-right">
                 <span data-toggle="tooltip" data-placement="auto" data-html="true"
-                      title="349 657">
+                      title="349 658">
                     68,6 %
                 </span>
             </td>
