--- a/praktik/01771825000.html
+++ b/praktik/01771825000.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>
-MUDr. Jana Kolerová, s.r.o. |
+Ordinace Meruňková s.r.o. |
 COVID očkování</title>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -117,7 +117,7 @@ COVID očkování</title>
     
 <div class="row">
     <div class="col">
-        <h3>Praktický lékař: MUDr. Jana Kolerová, s.r.o. </h3>
+        <h3>Praktický lékař: Ordinace Meruňková s.r.o. </h3>
     </div>
 </div>
 
