--- a/praktik/06505741000.html
+++ b/praktik/06505741000.html
@@ -175,6 +175,8 @@ COVID očkování</title>
                 </dl>
                 <div>
                     
+                    <a href="https://medicacentrum.cz/prakticky-lekar-plzen/" class="btn btn-primary" target="_blank">Web lékaře</a>
+                    
                 </div>
             </div>
         </div>
